Fixing Featured tile font color bug on smaller viewports, tweaking a couple focus styles

--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -26,6 +26,10 @@ body {
         color: #3273dc;
         text-decoration: underline;
       }
+
+      &:focus {
+        outline-offset: 6px;
+      }
     }
 
     & > nav {
